.kubernetes/drkiq-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: drkiq-ingress
spec:
  rules:
  - host: drkiq
    http:
      paths:
      - path: /
        backend:
          serviceName: drkiq
          servicePort: 8010
